modules/internet_gateway.tf
# インターネットゲートウェイ作成
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.vpc.id
  tags = {
    Name = "${var.app_name}-${terraform.workspace}-igw"
  }
}
